Note edits and actions.

--- a/20170421_notes.md
+++ b/20170421_notes.md
@@ -3,23 +3,21 @@
 
 ## Attendees
 
-- Cynthia West ( Glow Event Design )
-- Terry Peppers ( Leapfrog Online )
-- Kenneth Reitz ( Heroku )
-- Brandon Rhodes ( PyCon )
-- [ Natalie Malloy ( Heroku ) ]
+- Cynthia West / Glow Event Design
+- [ Natalie Malloy / Heroku ]
+- Kenneth Reitz / Heroku
+- Terry Peppers / Leapfrog Online
+- Brandon Rhodes / PyCon Conference Chair
+
 
 ## Notes
 
 - Details (Time, Location, Place)
-    - Date      / Friday, May 19
-    - Type      / Reception
-    - Time      / 09:30 PM - 11:30 PM (minimally) 
-                  ... have to be out of there @ 12:00 AM
-    - Venue     / Crystal Ballroom ( http://www.crystalballroompdx.com/ )
-                  Stage at one end ... we'll be cribbing right off the trivia 
-                  dinner ... bit.ly/2oZI5LS 
-    - Details   / Can hold 250 people ... 
+    - Date - Friday, May 19 2017
+    - Type - Reception
+    - Time - 09:30 PM - 11:30 PM (minimally) ... have to be out of there @ 12:00 AM
+    - Venue - Crystal Ballroom ( http://www.crystalballroompdx.com/ ). Stage at one end ... we'll be cribbing right off the trivia dinner ... bit.ly/2oZI5LS 
+    - Details - Can hold 250 people ... 
 
 
 - Mechanics
@@ -30,9 +28,13 @@
 
 
 - Context 
-    - Set it up like Russell Keith McGree for Write the Docs. 
-    - Drink tickets provided at the door. 
-    - Will check people in at the door. 
+    - Testing in Python Birds of a Feather (TiP BoF) History
+        - 2008 / Chicago
+        - 2013 / Santa Clara
+    - Emcee / Terry Peppers
+    - Introduction and then a collection of lightning talks. 
+    - Need a combination of veteran and first time lightning talkers. 
+    - Best lightning talk gets a Heorku sponsored lab coat. 
 
 
 - Action
@@ -53,6 +55,7 @@
                 - Harry Percival
                 - Augie Fackler
                 - Eric Cline
+                - Eric Holscher
         - [ ] Draft opening remarks. 
                 - Why the layoff?
                 - Code of conduct
