--- a/20170421_notes.md
+++ b/20170421_notes.md
@@ -39,7 +39,7 @@
 
 - Action
     - Brandon Rhodes
-        - [ ] Connect Cynthia and Natalie with Betsy at Venue. 
+        - [X] Connect Cynthia and Natalie with Betsy at Venue. 
         - [ ] Have PSF draft base Event Brite words. 
         - [ ] Prep for distribution of Event Brite.
     - Cynthia West and Natalie Malloy
@@ -47,6 +47,7 @@
         - [ ] Procure a Heroku themed lab coat
     - Kenneth Reitz
         - [ ] Reach out to network and identify 5 possible speakers.
+        - [ ] Leverage social networks to talk about event. 
     - Terry Peppers
         - [ ] Reach out to network and identify 5 possible speakers. 
                 - Gary Bernhradt
@@ -56,6 +57,7 @@
                 - Augie Fackler
                 - Eric Cline
                 - Eric Holscher
+        - [ ] Leverage social networks to talk about event. 
         - [ ] Draft opening remarks. 
                 - Why the layoff?
                 - Code of conduct
