--- a/20170421_notes.md
+++ b/20170421_notes.md
@@ -49,7 +49,7 @@
         - [ ] Reach out to network and identify 5 possible speakers.
         - [ ] Leverage social networks to talk about event. 
     - Terry Peppers
-        - [ ] Reach out to network and identify 5 possible speakers. 
+        - [X] Reach out to network and identify 5 possible speakers. 
                 - Gary Bernhradt
                 - Jeff Forcier
                 - Mike Pirnat
@@ -57,6 +57,8 @@
                 - Augie Fackler
                 - Eric Cline
                 - Eric Holscher
+                - Brian Okken
+                - Nathaniel Manista
         - [ ] Leverage social networks to talk about event. 
         - [ ] Draft opening remarks. 
                 - Why the layoff?
@@ -74,4 +76,5 @@
                 - Ticket handling
         - [ ] Come up with panel of judges. 
         - [ ] Do we do the buzzers?
+                - Brainstorming with Ned Jackson-Lovely
 
